feat(i18n): 添加教程相关翻译并更新配置页面文本- 在 en.json 和 zh-CN.json 中添加了教程相关的翻译内容- 更新了 GeneralConfigSection.vue 中的文本，使用新添加的翻译 - 修改了 tutorial-utils.js，使用新添加的翻译内容

--- a/src/i18n/messages/en.json
+++ b/src/i18n/messages/en.json
@@ -50,5 +50,86 @@
     "cancel": "Cancel",
     "upload": "Upload",
     "browse": "Browse"
+  },
+  "tutorial": {
+    "daleGribblePrompt": "Respond like Dale Gribble",
+    "exampleTitle": "Example Conversation",
+    "exampleUser": "This is an example saved conversation item.",
+    "exampleAssistant": "Feel free to explore and add your own conversations.",
+    
+    "settings": {
+      "title": "Settings Quick Guide",
+      "welcome": "Welcome to The MinimalChat Configuration Page! Follow this short guided tour to learn about the configuration experience.",
+      "gestureTitle": "Mobile Gesture Support",
+      "gestureDesc": "1.) Double tap anywhere in the configuration panel to quickly collapse and expand the model selection panel to the left. <br><br>2.) Swipe to the right from the edge of the screen to quickly close the settings page.",
+      "modelPanelTitle": "Model Selection Panel",
+      "modelPanelDesc": "Quickly select different models. The configuration panel to the right will update with the appropriate items.",
+      "modelGroupsTitle": "Model Groups",
+      "modelGroupsDesc": "Models of the same provider are grouped together for better organization. Click on a group to expand or collapse it.",
+      "generalConfigTitle": "General Configuration Settings",
+      "generalConfigDesc": "The general configuration option houses settings and actions that are more MinimalChat specific.",
+      "configSectionTitle": "Configuration Section",
+      "configSectionDesc": "This section displays the configuration options for the selected model. Adjust settings like API keys, temperature, max tokens, and more.",
+      "systemPromptTitle": "System Prompt",
+      "systemPromptDesc": "Enter a system prompt if you desire. This prompt will be used by the model to guide its responses.",
+      "savedPromptsTitle": "Saved System Prompts",
+      "savedPromptsDesc": "View and manage your saved system prompts here. Click on a prompt to select it, or click the trash icon to delete it.",
+      "contrastTitle": "Higher Contrast Messages",
+      "contrastDesc": "Enable or disable higher contrast messages for more distinction between messages. This results in a more classic message bubble design.",
+      "importExportTitle": "Import/Export Configuration",
+      "importExportDesc": "Manage your settings by exporting them to a JSON file for backup or importing settings from a JSON file.",
+      "finishedTitle": "Walkthrough Finished!",
+      "finishedDesc": "Thanks for following the walkthrough!"
+    },
+    
+    "main": {
+      "title": "MinimalChat Tutorial",
+      "welcome": "Welcome to MinimalChat! Follow this quick guided tour to learn about the app. It highlights useful information, features, and gestures!",
+      "configTitle": "Configuration Page",
+      "configDesc": "Visit the configuration page to set up various LLM models and services!",
+      "swipeRightTitle": "Swipe Right",
+      "swipeRightDesc": "Access the Configuration page quickly by swiping right from the edge of the screen!",
+      "swipeLeftTitle": "Swipe Left",
+      "swipeLeftDesc": "Access the Conversations Management page quickly by swiping left from the edge of the screen!",
+      "editMsgTitle": "Edit Previous Messages",
+      "editMsgDesc": "Double-click any user message in the conversation to enter edit mode and regenerate the response!",
+      "copyMsgTitle": "Copy Message Text",
+      "copyMsgDesc": "Tap the label of any message to quickly copy the text to your clipboard.",
+      "quickActionsTitle": "Quick Actions Menu",
+      "quickActionsDesc": "Double tap the messages list to open a quick actions menu for deleting or starting a new conversation.",
+      "visionTitle": "Initiate Vision Requests",
+      "visionDesc": "Start a Vision request by entering your prompt and choosing an image via the upload button!",
+      "uploadTitle": "Upload Files",
+      "uploadDesc": "Easily add the contents of valid files to the current conversation context.",
+      "githubTitle": "Have an Idea or Issue?",
+      "githubDesc": "Click the header icon to navigate to the GitHub repo where you can submit issues or ideas!",
+      "completeTitle": "Tutorial Complete!",
+      "completeDesc": "Thanks for following the tutorial! Dive in and start using the app however you like. Happy chatting!"
+    },
+    
+    "desktop": {
+      "title": "MinimalChat Walkthrough",
+      "welcome": "Welcome to MinimalChat! Follow this quick guided tour to learn about the app. It highlights useful information, features, and gestures!",
+      "modelSelectorTitle": "Quickly Change Models",
+      "modelSelectorDesc": "In the desktop layout, you can quickly switch the model being used for requests.",
+      "conversationsTitle": "Conversations Panel",
+      "conversationsDesc": "This area displays saved conversations and actions for managing them.",
+      "editTitleTitle": "Edit Conversation Titles",
+      "editTitleDesc": "Double-click a saved conversation to activate edit mode and change the conversation title.",
+      "configTitle": "Configuration Page",
+      "configDesc": "Visit the configuration page to set up various LLM models and services!",
+      "editMsgTitle": "Edit Previous Messages",
+      "editMsgDesc": "Double-click any user message in the conversation to enter edit mode and regenerate the response!",
+      "copyMsgTitle": "Copy Message Text",
+      "copyMsgDesc": "Tap the label of any message to quickly copy the text to your clipboard.",
+      "visionTitle": "Initiate Vision Requests",
+      "visionDesc": "Start a Vision request by entering your prompt and choosing an image via the upload button!",
+      "uploadTitle": "Upload Files",
+      "uploadDesc": "Easily add the contents of valid files (non-images, etc.) to the current conversation context.",
+      "githubTitle": "Have an Idea or Issue?",
+      "githubDesc": "Click the header icon to navigate to the GitHub repo where you can submit issues or ideas!",
+      "completeTitle": "Tutorial Complete!",
+      "completeDesc": "Thanks for following the tutorial! Dive in and start using the app however you like. Happy chatting!"
+    }
   }
 }
