--- a/src/i18n/messages/zh-CN.json
+++ b/src/i18n/messages/zh-CN.json
@@ -50,5 +50,83 @@
     "cancel": "取消",
     "upload": "上传",
     "browse": "浏览"
+  },
+  "tutorial": {
+    "daleGribblePrompt": "像 Dale Gribble 一样回应",
+    "exampleTitle": "示例对话",
+    "exampleUser": "这是一个示例保存的对话项。",
+    "exampleAssistant": "随时探索并添加您自己的对话。",
+    "settings": {
+      "title": "设置快速指南",
+      "welcome": "欢迎来到 MinimalChat 配置页面！跟随这个简短的导览来了解配置体验。",
+      "gestureTitle": "移动手势支持",
+      "gestureDesc": "1.) 在配置面板中的任意位置双击，可以快速收起和展开左侧的模型选择面板。<br><br>2.) 从屏幕边缘向右滑动可以快速关闭设置页面。",
+      "modelPanelTitle": "模型选择面板",
+      "modelPanelDesc": "快速选择不同的模型。右侧的配置面板将更新显示相应的选项。",
+      "modelGroupsTitle": "模型分组",
+      "modelGroupsDesc": "同一提供商的模型被分组在一起以便更好地组织。点击一个组来展开或折叠它。",
+      "generalConfigTitle": "通用配置设置",
+      "generalConfigDesc": "通用配置选项包含了更多与 MinimalChat 相关的设置和操作。",
+      "configSectionTitle": "配置部分",
+      "configSectionDesc": "此部分显示所选模型的配置选项。调整 API 密钥、温度、最大令牌等设置。",
+      "systemPromptTitle": "系统提示词",
+      "systemPromptDesc": "如果需要，可以输入系统提示词。该提示词将被模型用于指导其回应。",
+      "savedPromptsTitle": "保存的系统提示词",
+      "savedPromptsDesc": "在此查看和管理您保存的系统提示词。点击一个提示词来选择它，或点击垃圾桶图标删除它。",
+      "contrastTitle": "高对比度消息",
+      "contrastDesc": "启用或禁用高对比度消息，以便区分消息。这会产生更经典的消息气泡设计。",
+      "importExportTitle": "导入/导出配置",
+      "importExportDesc": "通过导出到 JSON 文件来备份您的设置，或从 JSON 文件导入设置。",
+      "finishedTitle": "教程已完成！",
+      "finishedDesc": "感谢您跟随教程！"
+    },
+    "main": {
+      "title": "MinimalChat 教程",
+      "welcome": "欢迎使用 MinimalChat！按照这个快速导览来了解应用程序。它会突出显示有用的信息、功能和手势！",
+      "configTitle": "配置页面",
+      "configDesc": "访问配置页面来设置各种 LLM 模型和服务！",
+      "swipeRightTitle": "向右滑动",
+      "swipeRightDesc": "从屏幕边缘向右滑动可快速访问配置页面！",
+      "swipeLeftTitle": "向左滑动",
+      "swipeLeftDesc": "从屏幕边缘向左滑动可快速访问对话管理页面！",
+      "editMsgTitle": "编辑之前的消息",
+      "editMsgDesc": "双击对话中的任何用户消息以进入编辑模式并重新生成回复！",
+      "copyMsgTitle": "复制消息文本",
+      "copyMsgDesc": "点击任何消息的标签以快速将文本复制到剪贴板。",
+      "quickActionsTitle": "快速操作菜单",
+      "quickActionsDesc": "双击消息列表以打开快速操作菜单，用于删除或开始新对话。",
+      "visionTitle": "发起视觉请求",
+      "visionDesc": "通过输入您的提示并通过上传按钮选择图片来开始视觉请求！",
+      "uploadTitle": "上传文件",
+      "uploadDesc": "轻松将有效文件的内容添加到当前对话上下文中。",
+      "githubTitle": "有想法或问题？",
+      "githubDesc": "点击头部图标导航至 GitHub 仓库，您可以在那里提交问题或想法！",
+      "completeTitle": "教程完成！",
+      "completeDesc": "感谢您跟随教程！开始使用应用程序吧。祝您聊天愉快！"
+    },
+    "desktop": {
+      "title": "MinimalChat 导览",
+      "welcome": "欢迎使用 MinimalChat！按照这个快速导览来了解应用程序。它会突出显示有用的信息、功能和手势！",
+      "modelSelectorTitle": "快速切换模型",
+      "modelSelectorDesc": "在桌面布局中，您可以快速切换用于请求的模型。",
+      "conversationsTitle": "对话面板",
+      "conversationsDesc": "此区域显示已保存的对话和管理它们的操作。",
+      "editTitleTitle": "编辑对话标题",
+      "editTitleDesc": "双击已保存的对话以激活编辑模式并更改对话标题。",
+      "configTitle": "配置页面",
+      "configDesc": "访问配置页面来设置各种 LLM 模型和服务！",
+      "editMsgTitle": "编辑之前的消息",
+      "editMsgDesc": "双击对话中的任何用户消息以进入编辑模式并重新生成回复！",
+      "copyMsgTitle": "复制消息文本",
+      "copyMsgDesc": "点击任何消息的标签以快速将文本复制到剪贴板。",
+      "visionTitle": "发起视觉请求",
+      "visionDesc": "通过输入您的提示并通过上传按钮选择图片来开始视觉请求！",
+      "uploadTitle": "上传文件",
+      "uploadDesc": "轻松将有效文件（非图像等）的内容添加到当前对话上下文中。",
+      "githubTitle": "有想法或问题？",
+      "githubDesc": "点击头部图标导航至 GitHub 仓库，您可以在那里提交问题或想法！",
+      "completeTitle": "教程完成！",
+      "completeDesc": "感谢您跟随教程！开始使用应用程序吧。祝您聊天愉快！"
+    }
   }
 }
